eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jodi-api-service
spec:
  selector:
    app: jodi-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
