eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jodi-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "api-jodi.mallickaashish.com.np"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jodi-api-service
                port:
                  number: 80
  tls:
    - hosts:
        - api-jodi.mallickaashish.com.np
      secretName: jodi-api-cert
